Do you actually need sudo?

--- a/.github/workflows/perltest.yml
+++ b/.github/workflows/perltest.yml
@@ -37,7 +37,7 @@ jobs:
     name: Test coverage
     steps:
       - uses: actions/checkout@v3
-      - run: sudo apt-get install pandoc
+      - run: apt-get install pandoc
       - name: Install modules
         run: cpanm -n --installdeps .
       - name: Coverage
