--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,8 @@ FROM perl:latest
 
 RUN apt-get update && \
     apt-get -y upgrade && \
+    apt-get install -y pandoc && \
     apt-get install -y build-essential && \
     apt-get install -y cpanminus libtidy-dev libxml++2.6-dev libhtml-tidy-perl && \
-    cpanm App::Aphra@0.0.6
+    cpanm -n App::Aphra@0.0.6
 
