Update version. Rename container

--- a/docker/build
+++ b/docker/build
@@ -2,5 +2,5 @@
 
 ver=`perl -nE '/\@v?([\d\.]+)/ and print $1 and exit' Dockerfile`
 echo Building version $ver
-docker build -t davorg/perl-app-aphra:latest -t davorg/perl-app-aphra:app-aphra_$ver .
-docker push -a docker.io/davorg/perl-app-aphra
+docker build -t davorg/aphra:latest -t davorg/aphra:app-aphra_$ver .
+docker push -a docker.io/davorg/aphra
