--- a/docker/build
+++ b/docker/build
@@ -1,5 +1,7 @@
 #!/bin/sh
 
+cd "$( dirname -- "${BASH_SOURCE[0]}" )"
+
 ver=`perl -nE '/\@v?([\d\.]+)/ and print $1 and exit' Dockerfile`
 echo Building version $ver
 docker build -t davorg/aphra:latest -t davorg/aphra:app-aphra_$ver .
